* daemt: added figure on exp2 makespans

--- a/papers/GECCO2011/dae_mt/dae_mt.tex
+++ b/papers/GECCO2011/dae_mt/dae_mt.tex
@@ -660,6 +660,13 @@ lost with the bottleneck due to multiple access locking.
 \label{fig:exp2_totalcost_elevators-12_pop_96}\end{center}
 \end{figure}
 
+\begin{figure}[htpb]
+\begin{center}
+\includegraphics[width=0.5\textwidth]{images/EXP2_Makespan_IPC6_TEMPO_OPENSTACKS_17_S96.pdf}
+\caption{Makespans of the 4 versions of \DAEYAHSP\ on \OPENSTACKS-17.}
+\label{fig:exp2_makespan_openstacks-17_pop_96}\end{center}
+\end{figure}
+
 Figure \ref{fig:exp2_totalcost_elevators-12_pop_96} shows that on \ELEVATORS-12
 the total cost remains unaffected by the number of cores used (results are
 similar on \OPENSTACKS-17).
